Utworzono za pomocą Colaboratory

--- a/2_0.ipynb
+++ b/2_0.ipynb
@@ -56,10 +56,10 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 333
+          "height": 378
         },
         "id": "f5355a41",
-        "outputId": "42600488-aeed-409b-c623-10e6d67f23f4"
+        "outputId": "06152676-4a6a-4246-f0db-5e5512a76156"
       },
       "source": [
         "'''Data analyze library'''\n",
@@ -97,16 +97,15 @@
         "    pokaz_ilosc(n_portions,n_dish)"
       ],
       "id": "f5355a41",
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-f65c988f-0074-4440-a64c-9c93ee5b6407\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-9de185e7-ce61-45a4-b5df-60a604f717cf\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-f65c988f-0074-4440-a64c-9c93ee5b6407\">\n",
+              "     <output id=\"result-9de185e7-ce61-45a4-b5df-60a604f717cf\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -116,28 +115,19 @@
               "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Saving przepisy_baza.xlsx to przepisy_baza.xlsx\n",
-            "Witamy w naszym CookingPlanner!\n",
-            "Podaj ilosc porcji: 321321\n",
-            "Podaj numer dania: 3\n",
-            "Oto czego potrzebujesz: \n",
-            "DANIE: kopytka_z_kapusta   LICZBA PORCJI: 321321\n",
-            "ZIEMNIAKI :  48198150  g\n",
-            "MIĘSO MIELONE :  0  g\n",
-            "SCHAB :  0  g\n",
-            "KAPUSTA :  64264200  g\n",
-            "MARCHEW :  0  g\n",
-            "PIECZARKI :  0  g\n",
-            "OGÓRKI :  0  g\n",
-            "BURAKI :  0  g\n",
-            "MĄKA :  80330250  g\n",
-            "ŚMIETANA :  0  g\n"
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-0b89c2ff3a6f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0muploaded\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/google/colab/files.py\u001b[0m in \u001b[0;36mupload\u001b[0;34m()\u001b[0m\n\u001b[1;32m     67\u001b[0m   \u001b[0mlocal_filenames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m   \u001b[0;32mwhile\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'action'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'complete'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m     result = _output.eval_js(\n\u001b[1;32m     71\u001b[0m         'google.colab._files._uploadFilesContinue(\"{output_id}\")'.format(\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
           ]
         }
       ]
